--- a/thomasdevri_es/nginx/thomasdevri_es.conf
+++ b/thomasdevri_es/nginx/thomasdevri_es.conf
@@ -1,17 +1,36 @@
 server {
 
-  listen 80;
-
   server_name thomasdevri.es;
 
   location = /favicon.ico { access_log off; log_not_found off; }
 
   location ^~ /static/ {
-    root /home/thomas/thomas-christmas/thomasdevri_es/static_root/;
+    alias /home/thomas/thomas-christmas/thomasdevri_es/static_root/;
   }
 
   location / {
     include proxy_params;
     proxy_pass http://unix:/home/thomas/thomas-christmas/thomasdevri_es/run/gunicorn.sock;
   }
+
+    listen 443 ssl; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/thomasdevri.es/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/thomasdevri.es/privkey.pem; # managed by Certbot
+    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+
+}
+server {
+    if ($host = thomasdevri.es) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+
+
+  listen 80;
+
+  server_name thomasdevri.es;
+    return 404; # managed by Certbot
+
+
 }
