gunicorn service restarts

--- a/thomasdevri_es/gunicorn/gunicorn.service
+++ b/thomasdevri_es/gunicorn/gunicorn.service
@@ -8,6 +8,9 @@ Group=www-data
 EnvironmentFile=/home/thomas/.env.thomasdevri_es
 WorkingDirectory=/home/thomas/thomas-christmas/thomasdevri_es
 ExecStart=/home/thomas/thomas-christmas/thomasdevri_es/venv/bin/gunicorn --access-logfile /var/log/gunicorn.log --workers 3 --bind unix:/home/thomas/thomas-christmas/thomasdevri_es/run/gunicorn.sock thomasdevri_es.wsgi:application
+Restart=always
+RestartSec=3
+
 
 [Install]
 WantedBy=multi-user.target
